[package]
name = "msp_rigid_body"
version = "0.1.5"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rapier3d = { package = "rapier3d-f64", version = "0.33.0", features = ["parallel"] }
rapier3d-urdf = "0.33.0"
rapier3d-mjcf = "0.33.0"

[build-dependencies]
cbindgen = "0.29.3"
